// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`admin ticket email MIME snapshots standard ticket includes QR and calendar MIME parts 1`] = `
"Subject: Your Ticket for Admin Email Snapshot Event is enclosed!
Content-Type: multipart/mixed; boundary="BOUNDARY"
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: multipart/related; boundary="BOUNDARY"
Content-Type: text/html; charset=UTF-8
Content-Type: image/png; name="ticket-qr.png"
Content-Disposition: inline; filename="ticket-qr.png"
Content-ID: <ticket-qr-00000000-0000-4000-8000-000000000002@stanfordspeakersbureau>
Content-Type: text/calendar; charset="utf-8"; name="stanford-speakers-bureau-event.ics"
Content-Disposition: attachment; filename="stanford-speakers-bureau-event.ics""
`;

exports[`admin ticket email MIME snapshots standby ticket omits QR MIME attachment 1`] = `
"Subject: Your standby ticket for Admin Email Snapshot Event is reserved
Content-Type: multipart/mixed; boundary="BOUNDARY"
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: text/html; charset=UTF-8
Content-Type: text/calendar; charset="utf-8"; name="stanford-speakers-bureau-event.ics"
Content-Disposition: attachment; filename="stanford-speakers-bureau-event.ics""
`;

exports[`admin ticket email MIME snapshots day-of reminder includes QR and calendar MIME parts 1`] = `
"Subject: [DOORS @ 6:30 PM TODAY!] Come see Admin Email Snapshot Event @ Test Auditorium
Content-Type: multipart/mixed; boundary="BOUNDARY"
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: multipart/related; boundary="BOUNDARY"
Content-Type: text/html; charset=UTF-8
Content-Type: image/png; name="ticket-qr.png"
Content-Disposition: inline; filename="ticket-qr.png"
Content-ID: <ticket-qr-00000000-0000-4000-8000-000000000002@stanfordspeakersbureau>
Content-Type: text/calendar; charset="utf-8"; name="stanford-speakers-bureau-event.ics"
Content-Disposition: attachment; filename="stanford-speakers-bureau-event.ics""
`;

exports[`admin ticket email MIME snapshots early reminder snapshots promotional copy and attachments 1`] = `
"Subject: Can you still make it this Tuesday @ 6:30 PM? Admin Email Snapshot Event @ Test Auditorium
Content-Type: multipart/mixed; boundary="BOUNDARY"
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: multipart/related; boundary="BOUNDARY"
Content-Type: text/html; charset=UTF-8
Content-Type: image/png; name="ticket-qr.png"
Content-Disposition: inline; filename="ticket-qr.png"
Content-ID: <ticket-qr-00000000-0000-4000-8000-000000000002@stanfordspeakersbureau>
Content-Type: text/calendar; charset="utf-8"; name="stanford-speakers-bureau-event.ics"
Content-Disposition: attachment; filename="stanford-speakers-bureau-event.ics""
`;

exports[`admin ticket email MIME snapshots cancellation and standby-line senders remain attachment-free 1`] = `
"Subject: Cancellation Confirmed: Your ticket for Admin Email Snapshot Event
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: text/html; charset=UTF-8"
`;

exports[`admin ticket email MIME snapshots cancellation and standby-line senders remain attachment-free 2`] = `
"Subject: Please come in-person for your ticket!
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: text/html; charset=UTF-8"
`;

exports[`admin ticket email MIME snapshots notify-now, notify-soon, and claim senders snapshot 1`] = `
"Subject: Tickets are LIVE for Admin Email Snapshot Event!
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: text/html; charset=UTF-8"
`;

exports[`admin ticket email MIME snapshots notify-now, notify-soon, and claim senders snapshot 2`] = `
"Subject: Heads up! Tickets for Admin Email Snapshot Event drop in 2 hours
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: text/html; charset=UTF-8"
`;

exports[`admin ticket email MIME snapshots notify-now, notify-soon, and claim senders snapshot 3`] = `
"Subject: Tickets are LIVE for Admin Email Snapshot Event!
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: text/html; charset=UTF-8"
`;

exports[`admin ticket email MIME snapshots announcement and campaign footer MIME snapshots 1`] = `
"Subject: Admin Email Snapshot Event is coming to Stanford!
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: text/html; charset=UTF-8"
`;

exports[`admin ticket email MIME snapshots announcement and campaign footer MIME snapshots 2`] = `
"Subject: Snapshot campaign
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: text/html; charset=UTF-8"
`;

exports[`admin ticket email MIME snapshots suggestion and event-question approvals snapshot 1`] = `
"Subject: Jane Doe just made the SSB leaderboard
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: text/html; charset=UTF-8"
`;

exports[`admin ticket email MIME snapshots suggestion and event-question approvals snapshot 2`] = `
"Subject: Your question for Admin Email Snapshot Event just went live
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: text/html; charset=UTF-8"
`;
